MMCPA-0: Fixing owldots spacing on mobile.

--- a/docroot/themes/custom/alshaya_white_label/sass/components/promo-blocks/_promo-block-front.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/components/promo-blocks/_promo-block-front.scss
@@ -15,9 +15,12 @@
     @include container(1026px);
   }
 
-  .field--name-field-banner img {
+  img {
     width: 100%;
     height: auto;
+  }
+
+  .field--name-field-banner img {
     max-height: 476px;
   }
 
